tests/valid/gcd.knv
fn main() -> void {
    let g = gcd(48, 36);
    exit g;
}

fn gcd(a: i32, b: i32) -> i32 {
    if b == 0 {
        return a;
    }
    let m = a % b;
    let res = gcd(b, m);
    return res;
}
