tests/errors/undeclared-fn.knv
fn main() -> void {
    exit ghost();
}
